--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
 							<li><% logo = image_tag("logo.png", :size => "100x200", class: "rounded-image") %>
 		  				<%= link_to logo, root_path %></li>
               <li><a href="/">Home</a></li>
-              <li><a href="/pages/about">About</a></li>
+              <li><a href="/explorer">Explorer</a></li>
               
               <% if user_signed_in? %>
               	<li><%=link_to "Authentications", authentications_path%></li>
