--- a/app/views/pois/_slider.html.erb
+++ b/app/views/pois/_slider.html.erb
@@ -3,16 +3,16 @@
 <!-- Carousel
     ================================================== -->
     <div id="myCarousel" class="carousel slide">
-      <div class="carousel-inner rounded-corners">
+      <div class="carousel-inner">
       	
       		<% x = 0 %>
           <% @slider_photos.each do |photo| %>
           	<% if x == 0 %>
-          	<div class="item active">
+          	<div class="item active rounded-corners">
 			        <%= image_tag photo.image.url(:gallery) %>    
 			      </div>
 			      <% else %>
-			      	<div class="item">
+			      	<div class="item rounded-corners">
 			        	<%= image_tag photo.image.url(:gallery) %>
 			      	</div>  	
 			      <% end %>
