--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,86 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <title><%= title || t('title') %></title>
-    <%= stylesheet_link_tag "application", :media => "all" %>
-    <%# render 'layouts/stylesheet' %>
-  	<%= javascript_include_tag "application" %>
-  	<%# javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyDpQyPKnWwpJLOZJCzZocuO9RoetHBk70Q&sensor=false" %>
-  	<%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?sensor=false" %>
-    <%= csrf_meta_tags %>  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body>	
-  	<div id="fb-root"></div>
-<script>
-  (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/es_ES/all.js#xfbml=1&appId=158273747603181";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-</script>
-
-  <body>
-  	
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="navcontainer">       
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-							<li><% logo = image_tag("logo.png", :size => "100x200", class: "rounded-image") %>
-		  				<%= link_to logo, root_path %></li>
-              <li><a href="/">Home</a></li>
-              <li><a href="/explorer">Explorer</a></li>
-              
-              <% if user_signed_in? %>
-              	<li><%=link_to "Authentications", authentications_path%></li>
-              <% end %>            
-            </ul>
-            
-            <div class="navbar pull-right">
-		          <%= link_to "eu", "?locale=eu", class: session[:locale] == 'eu' ? 'language-selected' : '' %>
-		          | 
-		          <%= link_to "es", "?locale=es", class: session[:locale] == 'es' ? 'language-selected' : '' %>
-		        </div>
-		        	
-		        	<% if user_signed_in? %>
-		        	<div class="pull-right">		        		
-		          	Logged as <%= link_to "#{current_user.name}", current_user %>&nbsp; 
-		          	<%= link_to "Sign Out", destroy_user_session_path %>&nbsp;&nbsp;		          	
-		          </div>
-		          <% else %>
-		          
-		          	<ul class="nav pull-right span2">              		
-	              		<li class="dropdown">
-	                	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign in <b class="caret"></b></a>
-	                	<ul class="dropdown-menu">
-		                  <%= render 'users/sessions/login'%>
-		                  <li class="divider"></li>
-		                  <li class="nav-header"><Nav header><%= t('authentications')%></li>
-		                  <li><a href="/auth/twitter" class="auth_provider">Twitter <%= image_tag "twitter_64.png", :size => "18x18", :alt => "Twitter" %></a></li>
-											  											
-											<li><a href="/auth/facebook" class="auth_provider">Facebook <%= image_tag "facebook_64.png", :size => "18x18", :alt => "Facebook" %></a></li>
-											  
-											<li><a href="/auth/google_oauth2" class="auth_provider">Google <%= image_tag "google_64.png", :size => "18x18", :alt => "Google" %> </a></li>
-											
-											<li><a href="/auth/foursquare" class="auth_provider"> Foursquare <%= image_tag "foursquare_64.png", :size => "18x18", :alt => "Forsquare" %></a></li>
-                		</ul>
-              			</li>
-            			</ul>
-            			
-		          <% end %> 
-        		
-        		<form class="navbar-form form-search pull-right span3">
-  							<input type="text" class="input-medium search-query">	
-						</form>
-            
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+  <%= render partial: 'layouts/header' %>
+  
 <div id="content">
     <div class="container rounded-corners" id="container">
     <div class="row">	
