--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,8 @@
  *= require bootstrap
  *= require bootstrap.min
  *= require pois
- *= file-uploader  
+ *= file-uploader
+   
  */
 
 
@@ -52,6 +53,19 @@ img[src*="gstatic.com/"], img[src*="googleapis.com/"]  {
 	width: 80%;
 	margin-left: auto;
   margin-right: auto;
+}
+
+.grey-box {
+  padding: 10px;
+  margin-bottom: 10px;
+  /*font-size: 18px;
+  font-weight: 200;
+  line-height: 30px;*/
+  color: inherit;
+  background-color: #eeeeee;
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
 }
 
 #content {
@@ -123,7 +137,7 @@ img[src*="gstatic.com/"], img[src*="googleapis.com/"]  {
 
     /* Carousel base class */
     .carousel {
-      margin-bottom: 80px;
+      margin-bottom: 100px;
     }
 
     .carousel .container {
@@ -146,8 +160,8 @@ img[src*="gstatic.com/"], img[src*="googleapis.com/"]  {
     }
     .carousel img {
       position: absolute;
-      /*top: 0;
-      left: 0;*/
+      top: 0;
+      left: 0;
       min-width: 100%;
       height: 500px;
     }
