--- a/app/assets/stylesheets/pois.css
+++ b/app/assets/stylesheets/pois.css
@@ -1,3 +1,19 @@
+.scroll-pane
+{
+	width: 90%;
+	height: 100%;
+	overflow: auto;
+}
+
+.pois-explorer {
+	position: absolute; 
+	top: 45px; 
+	bottom: 0;
+	right: 0;
+	left: 10px; 
+	width: 20%; 
+	z-index: 0;
+}
 
 .span-poi-side {
   width: 290px;
@@ -177,7 +193,7 @@ a.download-route:hover {
 
 a.map-expand {
   display: block;
-  color: whiteSmoke;
+  color: white;
   width: 988px;
   height: 18px;
   margin: 0 0 15px -25px;
@@ -200,9 +216,11 @@ a.map-expand:hover {
 }
 
 
+/*
+ 
 .slider {
   width: 990px;
-  height: 300px;
+  height: 400px;
   margin: 8px 0;
 }
 
@@ -217,7 +235,7 @@ a.map-expand:hover {
 
 #gallery {
   width: 890px;
-  height: 300px;
+  height: 400px;
   overflow: hidden;
   margin-left: -25px;
   
@@ -228,6 +246,7 @@ a.map-expand:hover {
 
 #thumbs {
   width: 100px;
-  height: 300px;
+  height: 400px;
   overflow: hidden;
 }
+*/
