--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -61,11 +61,14 @@ img[src*="gstatic.com/"], img[src*="googleapis.com/"]  {
   /*font-size: 18px;
   font-weight: 200;
   line-height: 30px;*/
-  color: inherit;
+  
   background-color: #eeeeee;
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
           border-radius: 6px;
+  -webkit-box-shadow: rgba(0,0,0,0.2) 0px 1px 3px;
+  -moz-box-shadow: rgba(0,0,0,0.2) 0px 1px 3px;
+  box-shadow: rgba(0,0,0,0.2) 0px 1px 3px;
 }
 
 #content {
