--- a/app/assets/stylesheets/pois.css
+++ b/app/assets/stylesheets/pois.css
@@ -1,6 +1,6 @@
 .scroll-pane
 {
-	width: 90%;
+	width: 100%;
 	height: 100%;
 	overflow: auto;
 }
@@ -11,7 +11,8 @@
 	bottom: 0;
 	right: 0;
 	left: 10px; 
-	width: 20%; 
+	width: 20%;
+	height: 100%; 
 	z-index: 0;
 }
 
