--- a/app/views/pois/explorer.html.erb
+++ b/app/views/pois/explorer.html.erb
@@ -3,22 +3,61 @@
 
 <div id="explorer-map-canvas" style="position: absolute; top: 45px; bottom: 0; left: 20%; right: 0; z-index: 0; display: block; clear: both;"></div>
 
-<div class="pois-explorer">
+<!-- <div class="pois-explorer">
 	<div class="scroll-pane">
 		<div id="places-list">
 		  <h2><%= t 'what_do' %></h2>
 		  <ul class="places-list">
-		    <%= render @what_to_do %>
+		    <%= render collection: @what_to_do, partial: "poi_explorer", as: :poi %>
 		  </ul>
 		</div>
 		
 		<div id="places-list">
 		  <h2><%= t 'what_see' %></h2>
 		  <ul class="places-list-condensed">
-		    <%= render @what_to_see %>
+		    <%= render collection: @what_to_see, partial: "poi_explorer", as: :poi %>
 		  </ul>
 		</div>
 		
-		<%= render @where_to_eat %>
+		<%= render collection: @what_to_eat, partial: "poi_explorer", as: :poi %>
 	</div>
+</div> -->
+
+<div class="pois-explorer">
+<div class="scroll-pane">
+<div class="accordion" id="accordion2">
+  <div class="accordion-group">
+   <div id="places-list">
+    <div class="accordion-heading">
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+        <%= t 'what_do' %>
+      </a>
+    </div>
+    <div id="collapseOne" class="accordion-body collapse in">
+      <div class="accordion-inner">
+        <ul class="places-list">
+		    	<%= render collection: @what_to_do, partial: "poi_explorer", as: :poi %>
+		  	</ul>
+      </div>
+    </div>
+   </div>
+  </div>
+  <div class="accordion-group">
+   <div id="places-list">
+    <div class="accordion-heading">
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+        <%= t 'what_see' %>
+      </a>
+    </div>
+    <div id="collapseTwo" class="accordion-body collapse">
+      <div class="accordion-inner">
+        <ul class="places-list-condensed">
+		    	<%= render collection: @what_to_see, partial: "poi_explorer", as: :poi %>
+		  	</ul>
+      </div>
+    </div>
+   </div>
+  </div>
+</div>
+</div>
 </div>
