--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,7 +40,7 @@ img[src*="gstatic.com/"], img[src*="googleapis.com/"]  {
 	color:#444;
 	height:2px;
 	line-height:0;
-	margin: 8px 0;
+	margin: 20px 20px;
 	page-break-after:always;
 	text-align:center;
 }
@@ -159,14 +159,14 @@ img[src*="gstatic.com/"], img[src*="googleapis.com/"]  {
     }
 
     .carousel .item {
-      height: 500px;
+      height: 350px;
     }
     .carousel img {
       position: absolute;
       top: 0;
       left: 0;
       min-width: 100%;
-      height: 500px;
+      height: 350px;
     }
 
     .carousel-caption {
