--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,8 @@
   	<%= javascript_include_tag "application" %>
   	<%# javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyDpQyPKnWwpJLOZJCzZocuO9RoetHBk70Q&sensor=false" %>
   	<%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?sensor=false" %>
+  	<%= stylesheet_link_tag "http://cdn.leafletjs.com/leaflet-0.5/leaflet.css" %>
+  	<%= javascript_include_tag "http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"%>
     <%= csrf_meta_tags %>  
   </head>
   <body>	
