--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 				<p class="lead span4"><%= t('subtitle')%></p>
         		<p class="span4"><%= t('subsubtitle')%></p>
     </div>
-		<hr class="title-divider span11" />
+		<hr class="title-divider rounded-corners span11" />
       
 								
 				<%= yield %>
