--- a/app/views/pois/_form.html.erb
+++ b/app/views/pois/_form.html.erb
@@ -4,7 +4,6 @@
       <% if @poi.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@poi.errors.count, "error") %> prohibited this poi from being saved:</h2>
-    
           <ul>
           <% @poi.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
@@ -14,7 +13,7 @@
       <% end %>
     
       <div class="clearfix">
-        <%= f.label t(:poi_title) %>
+        <%= f.label t(:poi_name) %>
         <div class="input">
           <%= f.text_field :name, class: 'span6' %>
         </div>
