--- a/app/views/pois/_poi.html.erb
+++ b/app/views/pois/_poi.html.erb
@@ -1,8 +1,8 @@
-<div class="grey-box">
+
 <li class="poi-preview" data-poi-id="<%= poi.id %>" data-poi-lat="<%= poi.latitude %>" data-poi-lng="<%= poi.longitude %>" data-poi-name="<%= poi.name %>" data-poi-slug="<%= poi.slug %>">
   <div class="poi-img thumbnail">
     <%= link_to poi_url(poi) do %>
-      <%= image_tag poi.photos.count > 0 ? poi.photos.first.image.url(:thumb_wide) : '/assets/poi-placeholder.png', class: 'poi-preview' %>
+      <%= image_tag poi.photos.count > 0 ? poi.photos.first.image.url(:thumb_wide) : '/assets/poi-placeholder.jpg', class: 'poi-preview' %>
     <% end %>
   </div>
   <div class="pois-content">
@@ -15,7 +15,7 @@
       </div>
       <span><%= poi.ratings_count %></span>
     </div>
-    <p><h4><%= link_to poi.name, poi_url(poi) %></h4></p>
+    <h4><%= link_to poi.name, poi_url(poi) %></h4>
     <div class="poi-user">
       <span>por <%= link_to poi.user.name, user_url(poi.user) if poi.user %> </span>
     </div>
@@ -29,4 +29,4 @@
     
   </div>
 </li>
-</div>
+
